# dcetools

./: .gitignore  Docs_CLI.md  Makefile  autodoc.py  launcher.py  pyproject.toml  readme.md  test_html.html
.github/workflows/: publish-snapshots.yml  publish-versions.yml  publish.yml
dcetools/: search.py  types.py  validate_logs.py
dcetools/formatter/: HtmlWriter.py  MarkdownNodeWriter.py  MarkdownTextWriter.py  base.py  runner.py
dcetools/static/: html_prefix.html.j2
dcetools/util/: argparse_helpers.py  logfmt.py
tests/: output_html.html  output_node.md  output_text.md  test_render.py  test_validate.py
