[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcetools"
version = "0.1.0"
description = "A Python application template"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "colorama",
    "tqdm",
    "ujson",
    "markdownify",
    "markdown",
    "discord_markdown_ast_parser",
    "jinja2",
    "requests",
    "joblib"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "vulture>=2.0",
    "pyinstaller>=6.0",
]

[project.scripts]
dcetools = "launcher:main"

[tool.setuptools]
packages = ["dcetools"]
